Add: P to index

--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body>
 
+<body>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita atque asperiores id consequatur iure iusto
+        perspiciatis modi quam nobis, maiores illo doloremque at maxime adipisci ipsa veniam, nostrum possimus
+        similique?
+    </p>
 </body>
+
 </html>
